--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
                 <a href="./index.html">Studio</a>
             </li>
             <li>
-                <a href="#what we do">Portfolio</a>
+                <a href="#activity">Portfolio</a>
             </li>
             <li>
                 <a href="#contacts">Contacts</a>
             </li>
         </ul>
        </nav>
+
+       <address>
+        <li>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+       </address>
        
-       <ul>
-        <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-       </ul>
+      
 
     </header>
 
@@ -71,7 +73,7 @@
      </section>
 
     <!-- Activity section -->
-    <section id="what we do">
+    <section id="activity">
         <h2>What are we doing</h2>
         <ul>
             <li><img src="./images/section3_im1.jpg" alt="Computer" width="360" height="300"></li>
@@ -87,10 +89,18 @@
      <section>
         <h2>Our Team</h2>
         <ul>
-            <li><img src="./images/section4_teamcard1.jpg" alt="Product Designer" width="264" height="380"></li>
-            <li><img src="./images/section4_teamcard2.jpg" alt="Frontend Developer" width="264" height="380"></li>
-            <li><img src="./images/section4_teamcard3.jpg" alt="Marketing" width="264" height="380"></li>
-            <li><img src="./images/section4_teamcard4.jpg" alt="UI Designer" width="264" height="380"></li>
+            <li><img src="./images/section4_im1.jpg" alt="Product Designer" width="264" height="260">
+            <h3>Mark Guerrero</h3><p>Product Designer</p>
+            </li>
+            <li><img src="./images/section4_im2.jpg" alt="Frontend Developer" width="264" height="260">
+            <h3>Tom Ford</h3><p>Frontend Developer</p>
+            </li>
+            <li><img src="./images/section4_im3.jpg" alt="Marketing" width="264" height="260">
+            <h3>Camila Garcia</h3><p>Marketing</p>
+            </li>
+            <li><img src="./images/section4_im4.jpg" alt="UI Designer" width="264" height="260">
+            <h3>Daniel Wilson</h3><p>UI Designer</p>
+            </li>
         </ul>
      </section>
 
