--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <!-- Header section -->
     <header>
-       <a href="./index.html">WebStudio</a>
+       <a href="./index.html WebStudio">WebStudio</a>
        <nav>
         <ul>
             <li>
-                <a href="./index.html">Studio</a>
+                <a href="./index.html WebStudio">Studio</a>
             </li>
             <li>
                 <a href="#activity">Portfolio</a>
