--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
     <!-- Header section -->
     <header>
-       <a href="./index.html WebStudio">WebStudio</a>
        <nav>
+        <a href="./index.html WebStudio">WebStudio</a>
         <ul>
             <li>
-                <a href="./index.html WebStudio">Studio</a>
+                <a href="">Studio</a>
             </li>
             <li>
-                <a href="#activity">Portfolio</a>
+                <a href="">Portfolio</a>
             </li>
             <li>
-                <a href="#contacts">Contacts</a>
+                <a href="">Contacts</a>
             </li>
         </ul>
        </nav>
@@ -53,6 +53,7 @@
 
      <!-- Features section -->
      <section>
+        <h2 hidden>Advances</h2>
         <ul>
             <li>
                 <h3>Strategy</h3>
@@ -75,7 +76,7 @@
      </section>
 
     <!-- Activity section -->
-    <section id="activity">
+    <section id="">
         <h2>What are we doing</h2>
         <ul>
             <li><img src="./images/section3_im1.jpg" alt="Computer" width="360" height="300"></li>
@@ -109,8 +110,8 @@
     </main>
 
     <!-- Footer section -->
-    <footer id="contacts">
-        <a href="./index.html">WebStudio</a>
+    <footer id="">
+        <a href="./index.html WebStudio">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         
     </footer>
