--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
      </section>
 
     <!-- Activity section -->
-    <section id="">
+    <section>
         <h2>What are we doing</h2>
         <ul>
             <li><img src="./images/section3_im1.jpg" alt="Computer" width="360" height="300"></li>
